# llm-wiki-vault

./: .gitignore  .python-version  AGENTS.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml  requirements.txt  run_all_tests.py  run_tests.py  valhopper
docs/superpowers/plans/: 2026-04-24-valhopper-commands.md  2026-04-24-valhopper-core-infra.md
skills/: index.md  ingest.md  lint.md  research.md  wrap-up.md
src/: valhopper_cli.py
src/valhopper/: __init__.py  client.py  config.py  db.py  models.py  valhopper_cli.py  valhopper_logging.py  valhopper_transactions.py
src/valhopper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  results.md  test_cache.py  test_client.py  test_config.py  test_db.py  test_logging.py  test_models.py  test_optimize.py  test_return_result.py  test_transactions.py
