[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valhopper"
version = "0.1.0"
description = "Bittensor Alpha Token Stake Optimizer - Move stakes to the most profitable validators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ValHopper Team"}
]
keywords = ["bittensor", "staking", "validator", "defi", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bittensor>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
valhopper = "valhopper.valhopper_cli:cli"
vh = "valhopper.valhopper_cli:cli"

[project.urls]
Homepage = "https://github.com/taoleeh/valhopper"
Documentation = "https://github.com/taoleeh/valhopper#readme"
Repository = "https://github.com/taoleeh/valhopper"
Issues = "https://github.com/taoleeh/valhopper/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
valhopper = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
